--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@splidejs/react-splide": "^0.4.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "netslider": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-items-carousel": "^2.8.0",
+    "react-multi-carousel": "^2.6.3",
     "react-scripts": "4.0.3",
+    "react-touch-carousel": "^0.9.4",
+    "semantic-ui-react": "^2.0.3",
+    "swiper": "^6.7.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
