--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-items-carousel": "^2.8.0",
     "react-multi-carousel": "^2.6.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-touch-carousel": "^0.9.4",
     "semantic-ui-react": "^2.0.3",
