--- a/package.json
+++ b/package.json
@@ -7,18 +7,30 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@u-wave/react-youtube": "^0.7.2",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
+    "jquery": "^3.6.0",
     "netslider": "^1.3.5",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-items-carousel": "^2.8.0",
+    "react-magnific-popup": "^1.0.1",
+    "react-modal": "^3.14.3",
+    "react-modal-video": "^1.2.8",
     "react-multi-carousel": "^2.6.3",
+    "react-player": "^2.9.0",
+    "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-touch-carousel": "^0.9.4",
-    "semantic-ui-react": "^2.0.3",
+    "reactjs-popup": "^2.0.5",
+    "semantic-ui-css": "^2.4.1",
+    "simple-react-lightbox": "^3.6.6",
     "swiper": "^6.7.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
